--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
+    background-attachment: fixed;
+    color: #fff;
+  }
+  
