--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,7 +2,7 @@ h1 {
     text-align: center;
     font-size: 2.5em;
     margin-bottom: 10px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: monospace;
     color: rgb(54, 53, 53);
     margin-bottom: 20px;
   }
