--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,13 +15,13 @@
     color: rgb(54, 53, 53);
     font-size: 2em;
     margin-bottom: 10px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: monospace;
   }
   
   p {
     font-size: 1.2em;
     color: #333;
     margin-top: 15px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: monospace;
   }
   
